welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:10: error: value && is not a member of Unit
	if (posfinale() && (getDirection() == Direction.EST) ) {
                        ^SnakeBuggle:15: error: value && is not a member of Unit
		if (posfinale() && (getDirection() == Direction.OUEST) ) {
                                ^SnakeBuggle:26: error: value unary_! is not a member of Unit
	while (!posfinale) {
               ^